Refactorings in case of Java 12